--- a/html/Módulo 7/Exercício - Módulo 7/Botafogo.html
+++ b/html/Módulo 7/Exercício - Módulo 7/Botafogo.html
@@ -8,7 +8,7 @@
 	<body>
 		<h1>Botafogo</h1>
 		
-		<article><p><b>Botafogo de Futebol</b> e Regatas é uma agremiação poliesportiva brasileira, com sede no bairro homônimo ao clube, na cidade do Rio de Janeiro. Nascido da fusão do Club de Regatas Botafogo (fundado para o remo em 1894) com o Botafogo Football Club (formado para o futebol em 1904), é um dos principais clubes do Brasil.</p>
+		<article><p><b>Botafogo de Futebol</b> e Regatas é uma agremiação 'poliesportiva' brasileira, com sede no bairro homônimo ao clube, na cidade do Rio de Janeiro. Nascido da fusão do Club de Regatas Botafogo (fundado para o remo em 1894) com o Botafogo Football Club (formado para o futebol em 1904), é um dos principais clubes do Brasil.</p>
           
         </article>
 
